exports[`test renders correctly 1`] = `
<HeaderBar
  icon="cactus"
  title="Cactus settings">
  <div
    className="display:flex flex:column flex:0-auto color:white border-color:brand border:bottom border:2">
    <div
      className="display:flex flex:items-center flex:44px padding-x:7">
      <Icon
        className="text-color:brand"
        icon="cactus"
        size="25px">
        <span
          className="icon-cactus text-color:brand"
          style={
            Object {
              "color": undefined,
              "fontSize": "25px",
            }
          } />
      </Icon>
      <div
        className="w:100p font:roboto-condensed text-color:neutral-dark size:14 text:left text:truncate text:uppercase padding-x:7">
        Cactus settings
      </div>
    </div>
  </div>
</HeaderBar>
`;

exports[`test renders with buttons 1`] = `
<HeaderBar
  icon="cactus"
  title="Cactus settings">
  <div
    className="display:flex flex:column flex:0-auto color:white border-color:brand border:bottom border:2">
    <div
      className="display:flex flex:items-center flex:44px padding-x:7">
      <Icon
        className="text-color:brand"
        icon="cactus"
        size="25px">
        <span
          className="icon-cactus text-color:brand"
          style={
            Object {
              "color": undefined,
              "fontSize": "25px",
            }
          } />
      </Icon>
      <div
        className="w:100p font:roboto-condensed text-color:neutral-dark size:14 text:left text:truncate text:uppercase padding-x:7">
        Cactus settings
      </div>
      <HeaderButton
        className="margin-r:7"
        label="Search"
        onClick={[Function]}>
        <Button
          btn="header-button small raised"
          className="margin-r:7"
          onClick={[Function]}
          style={
            Object {
              "flex": "0 0 auto",
            }
          }>
          <button
            className="margin-r:7"
            data-btn="header-button small raised"
            onClick={[Function]}
            style={
              Object {
                "flex": "0 0 auto",
              }
            }>
            Search
          </button>
        </Button>
      </HeaderButton>
      <HeaderButton
        label="Filter"
        onClick={[Function]}>
        <Button
          btn="header-button small raised"
          onClick={[Function]}
          style={
            Object {
              "flex": "0 0 auto",
            }
          }>
          <button
            data-btn="header-button small raised"
            onClick={[Function]}
            style={
              Object {
                "flex": "0 0 auto",
              }
            }>
            Filter
          </button>
        </Button>
      </HeaderButton>
    </div>
  </div>
</HeaderBar>
`;

exports[`test renders with no border 1`] = `
<HeaderBar
  hideBorder={true}
  icon="cactus"
  title="Cactus settings">
  <div
    className="display:flex flex:column flex:0-auto color:white">
    <div
      className="display:flex flex:items-center flex:44px padding-x:7">
      <Icon
        className="text-color:brand"
        icon="cactus"
        size="25px">
        <span
          className="icon-cactus text-color:brand"
          style={
            Object {
              "color": undefined,
              "fontSize": "25px",
            }
          } />
      </Icon>
      <div
        className="w:100p font:roboto-condensed text-color:neutral-dark size:14 text:left text:truncate text:uppercase padding-x:7">
        Cactus settings
      </div>
    </div>
  </div>
</HeaderBar>
`;
